# astronomical_archive_scrapers

./: .gitignore  Extract Science Blocks.ipynb  LCO_download_test.ipynb  Untitled.ipynb  View Data.ipynb  check_structure_lco.py  dataset_parameters.json  dataset_parameters.txt  dataset_parameters_large.json  download_datasets_lco.py  download_lco_new.py  fits_checker.py  get_dataframe_lco.py  get_dataframe_lco_default.py  get_dataframe_noao.py  lco_schedule_scraper.py  mp_workers.py  multiprocessing_functions.py  observation_patterns_v1.json  observation_patterns_v2.json  params_2m_2015-2017.json  plotting.py  pyproject.toml  readme.md  requirements.txt  scrape_lco_schedule.ipynb  sd2.json  sd3.json  shared_functions.py  site_data.json  timer_class.py  todo.md
archive_data_2019/2019-03/coj_1m0a_2019-03-01_2019-04-01/: _complete
archive_data_2019/2019-03/coj_2m0a_2019-03-01_2019-04-01/: _complete
data/coj_2m0a_2015-02-01_2015-08-01/: _complete
data/coj_2m0a_2015-08-01_2016-02-01/: _complete
data/coj_2m0a_2016-02-01_2016-08-01/: _complete  datafile_4.json
data/coj_2m0a_2016-08-01_2017-02-01/: _complete
data/ogg_2m0a_2015-02-01_2015-04-01/: _complete
data/ogg_2m0a_2015-04-01_2015-06-01/: _complete  datafile_8.json
data/ogg_2m0a_2015-06-01_2015-08-01/: _complete
data/ogg_2m0a_2015-08-01_2015-10-01/: _complete
data/ogg_2m0a_2015-10-01_2015-12-01/: _complete
data/ogg_2m0a_2015-12-01_2016-02-01/: _complete  datafile_14.json
refactored/: download_datasets_lco.py
soar_files/: download_datasets_soar.py  soar_data.pkl  soar_download_notebook.ipynb
(+28 files in other folders)
