[tool.poetry]
name = "archive-scrapers"
version = "0.1.0"
description = ""
authors = ["Elliott Fogg <elliott.fogg@gmail.com>"]
readme = "README.md"
packages = [{include = "archive_scrapers"}]

[tool.poetry.dependencies]
python = "3.11"
numpy = "^1.26.1"
scipy = "^1.11.3"
pandas = "^2.1.2"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
jupyter = "^1.0.0"
plotly = "^5.18.0"
ipywidgets = "^8.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
